refactored pool ui resources and base logic, removed old pi calc ui

--- a/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/ColoredBalls/Resources.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/ColoredBalls/Resources.resx
@@ -139,7 +139,7 @@
     <value>Color count:</value>
   </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Pool Calculation: Bag of Colored Balls</value>
+    <value>Bag of Colored Balls</value>
   </data>
   <data name="ElementName_ConditionColor" xml:space="preserve">
     <value>Condition Color</value>
