--- a/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/Dice/Resources.cs.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Calculations/Pool/Dice/Resources.cs.resx
@@ -145,7 +145,7 @@
     <value>Čtyřstranná Kostka</value>
   </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Výpočet s Osudím: Kostka</value>
+    <value>Kostka</value>
   </data>
   <data name="ElementName_Dice" xml:space="preserve">
     <value>Zvolená Kostka</value>
