--- a/ExperimentalProbability.Contracts/Properties/Resources/Calculations/TwoDPlane/Area/Resources.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Calculations/TwoDPlane/Area/Resources.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Description_FunctionPrefix" xml:space="preserve">
-    <value>Function prefix:</value>
+  <data name="FinalResultName" xml:space="preserve">
+    <value>Approximate area of the function =</value>
   </data>
-  <data name="DisplayName" xml:space="preserve">
-    <value>2-D Plane Calculation:</value>
+  <data name="FullDescription" xml:space="preserve">
+    <value>This calculation works in a 2-D plane where exists a rectangle wrapped around the function y = (x^2 - 4) * sin(x). The side of the rectangle parallel to the axis X has the length of 10 and is limited by x = -5 and x = 5. The side of the rectangle parallel to the axis Y has the lenght of 40 and is limited by y = -20 and y = 20.</value>
+  </data>
+  <data name="Function" xml:space="preserve">
+    <value>y = (x^2 - 4) * sin(x)</value>
   </data>
 </root>
