--- a/ExperimentalProbability.Contracts/Properties/Resources/Shell/Resources.resx
+++ b/ExperimentalProbability.Contracts/Properties/Resources/Shell/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AreaCalc" xml:space="preserve">
+    <value>y = (x^2 - 4) * sin(x)</value>
+  </data>
   <data name="ColoredBallsCalc" xml:space="preserve">
     <value>Bag with colored balls</value>
   </data>
@@ -129,11 +132,11 @@
   <data name="Header" xml:space="preserve">
     <value>Menu</value>
   </data>
+  <data name="PiCalc" xml:space="preserve">
+    <value>x^2 + y^2 = 1</value>
+  </data>
   <data name="PoolCalcs" xml:space="preserve">
     <value>Pool Calculations:</value>
-  </data>
-  <data name="QuarterCircleCalc" xml:space="preserve">
-    <value>x^2 + y^2 = 1</value>
   </data>
   <data name="Tutorial" xml:space="preserve">
     <value>Tutorial</value>
